Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="header-item">
                     <a href="tel:9845098450">
                         <i class="bi bi-telephone"></i>
-                        <p>info@organic.com</p>
+                        <p>1234567890</p>
                     </a>
                 </div>
 
@@ -513,11 +513,20 @@
             <h3><strong>Testimonial</strong></h3>
             <img src="title_line.png" alt="">
         </div>
-        <div class="boxes">
-            <div class="box"></div>
-            <div class="box"></div>
+       <div class="boxes">
+            <div class="box"><img src="testimonial.png" alt=""></div>
+            <div class="box">
+                <p>
+                    At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+                    <p>corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui</p><p>officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.</p>
+                    <br>
+                    <h3>Kavin Peterson</h3>
+            </div>
         </div>
     </div>
+    <footer>
+        <p>Web Project 2025 Designed & Developed By <span> Vivek Rajput</span></p>
+    </footer>
 </body>
 </html>
 <!-- click install 
@@ -528,5 +537,6 @@
  enter
  if error then reopen
  and also at right CDN copy first link paste on head
+
 
   -->
